--- a/static/styles.css
+++ b/static/styles.css
@@ -43,12 +43,47 @@ nav {
     padding: 12px;
 }
 
+@-webkit-keyframes shadow-drop-2-center {
+    0% {
+        -webkit-transform: translateZ(0);
+        transform: translateZ(0);
+        -webkit-box-shadow: 0 0 0 0 rgba(107, 102, 102, 0);
+        box-shadow: 0 0 0 0 rgba(102, 100, 100, 0);
+    }
+
+    100% {
+        -webkit-transform: translateZ(50px);
+        transform: translateZ(50px);
+        -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+        box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+    }
+}
+
+@keyframes shadow-drop-2-center {
+    0% {
+        -webkit-transform: translateZ(0);
+        transform: translateZ(0);
+        -webkit-box-shadow: 0 0 0 0 rgba(104, 101, 101, 0);
+        box-shadow: 0 0 0 0 rgba(87, 85, 85, 0);
+    }
+
+    100% {
+        -webkit-transform: translateZ(50px);
+        transform: translateZ(50px);
+        -webkit-box-shadow: 0 0 20px 0px rgba(253, 246, 246, 0.35);
+        box-shadow: 0 0 20px 0px rgba(250, 248, 248, 0.35);
+    }
+}
+
 .nav-links a:hover {
     color: white;
+    -webkit-animation: shadow-drop-2-center 0.2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: shadow-drop-2-center 0.2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
 nav svg {
     display: none;
+    cursor: pointer;
 }
 
 main {
@@ -149,6 +184,7 @@ p {
         align-items: center;
         z-index: 10;
         transform: translateX(100%);
+        transition: transform 0.4 ease-in;
     }
 
     .nav-links li {
@@ -158,4 +194,5 @@ p {
     nav svg {
         display: block;
     }
+    
 }
