--- a/static/styles.css
+++ b/static/styles.css
@@ -146,6 +146,28 @@ p {
     margin: 0.5rem;
 }
 
+@-webkit-keyframes slide-top {
+    0% {
+      -webkit-transform: translateY(100px);
+              transform: translateY(100px);
+    }
+    100% {
+      -webkit-transform: translateY(0px);
+              transform: translateY(0px);
+    }
+  }
+  @keyframes slide-top {
+    0% {
+      -webkit-transform: translateY(100px);
+              transform: translateY(100px);
+    }
+    100% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+    }
+  }
+  
+
 .circle1,
 .circle2 {
     background: white;
@@ -155,6 +177,8 @@ p {
     position: absolute;
     border-radius: 50%;
     z-index: 1;
+    -webkit-animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
 .circle1 {
@@ -193,9 +217,6 @@ p {
 
     .burger{
         display: block;
-    }
-    .nav-active{
-    transform: translateX(0%);
     }
         
 }
