--- a/static/styles.css
+++ b/static/styles.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Belleza', sans-serif;
-    background: linear-gradient(to right top, #d7f6f0, #6cdbeb);
+    
 
 }
 
@@ -50,6 +50,7 @@ body {
 }
 
 nav {
+    
     background-color: black;
     font-size: 1.5rem;
     color: rgb(240, 234, 234);
@@ -57,6 +58,7 @@ nav {
     align-items: center;
     justify-content: space-around;
     min-height: 10vh;
+    
 }
 
 .logo {
@@ -130,6 +132,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    background: linear-gradient(to right top, #d7f6f0, #6cdbeb);
 
 }
 
@@ -185,6 +188,16 @@ p {
 
 .soc svg {
     margin: 0.5rem;
+}
+
+.about-me {
+    display: flex;
+    align-items: center;
+    justify-content: top;
+    flex-direction: column;
+    margin: 2rem;
+    padding: 1rem;
+    font-size: 1.2rem;
 }
 
 @-webkit-keyframes shake-vertical {
@@ -306,5 +319,21 @@ p {
     .burger {
         display: block;
     }
+
+}
+
+.lang {
+    display: flex;
+    
+    padding: 2rem;
+    flex-direction: column;
+    background: linear-gradient(to right top, rgb(180 218 255) 0%, rgb(221 198 242) 100%);
+    background: linear-gradient(to right top, rgb(180 218 255), rgb(221 198 242));
+    min-height: 100vh;
+
+}
+
+#langList {
+    list-style: none;
 
 }
