--- a/static/styles.css
+++ b/static/styles.css
@@ -327,8 +327,8 @@ p {
     
     padding: 2rem;
     flex-direction: column;
-    background: linear-gradient(to right top, rgb(180 218 255) 0%, rgb(221 198 242) 100%);
-    background: linear-gradient(to right top, rgb(180 218 255), rgb(221 198 242));
+    background-color: #c6d9f8;
+    background-image: linear-gradient(120deg, #c6d9f8 0%, #f7c9fc 100%);
     min-height: 100vh;
 
 }
