--- a/static/styles.css
+++ b/static/styles.css
@@ -6,7 +6,8 @@
 
 body {
     font-family: 'Belleza', sans-serif;
-    
+    scroll-snap-type: y mandatory;
+    overflow-y: scroll;
 
 }
 
@@ -50,7 +51,7 @@ body {
 }
 
 nav {
-    
+
     background-color: black;
     font-size: 1.5rem;
     color: rgb(240, 234, 234);
@@ -58,7 +59,7 @@ nav {
     align-items: center;
     justify-content: space-around;
     min-height: 10vh;
-    
+
 }
 
 .logo {
@@ -95,8 +96,8 @@ nav {
     100% {
         -webkit-transform: translateZ(50px);
         transform: translateZ(50px);
-        -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
-        box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+        -webkit-box-shadow: 0 0 20px 0px rgba(160, 153, 153, 0.35);
+        box-shadow: 0 0 20px 0px rgba(190, 186, 186, 0.35);
     }
 }
 
@@ -104,8 +105,8 @@ nav {
     0% {
         -webkit-transform: translateZ(0);
         transform: translateZ(0);
-        -webkit-box-shadow: 0 0 0 0 rgba(104, 101, 101, 0);
-        box-shadow: 0 0 0 0 rgba(87, 85, 85, 0);
+        -webkit-box-shadow: 0 0 0 0 rgba(179, 175, 175, 0);
+        box-shadow: 0 0 0 0 rgba(173, 169, 169, 0);
     }
 
     100% {
@@ -120,6 +121,7 @@ nav {
     color: white;
     -webkit-animation: shadow-drop-2-center 0.2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     animation: shadow-drop-2-center 0.2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+
 }
 
 .burger {
@@ -133,7 +135,7 @@ main {
     align-items: center;
     justify-content: center;
     background: linear-gradient(to right top, #d7f6f0, #6cdbeb);
-
+    scroll-snap-align: start;
 }
 
 .glass {
@@ -198,6 +200,34 @@ p {
     margin: 2rem;
     padding: 1rem;
     font-size: 1.2rem;
+}
+.about-me h1::before {
+    transform: scaleX(0);
+    transform-origin: bottom right;
+}
+
+.about-me h1:hover::before {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+
+.about-me h1::before {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    inset: 0 0 0 0;
+    background: hsl(200 100% 80%);
+    z-index: -1;
+    transition: transform .3s ease;
+}
+
+.about-me h1 {
+    font-size: 2rem;
+    margin-bottom: 5rem;
 }
 
 @-webkit-keyframes shake-vertical {
@@ -270,7 +300,7 @@ p {
 
 
 .circle1,
-.circle2 {
+.circle2, .circle3 {
     background: white;
     background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.3));
     height: 9rem;
@@ -290,6 +320,12 @@ p {
 .circle2 {
     bottom: -12%;
     left: 11%;
+}
+.circle3{
+    left: 2%;
+    top: 20%;
+    height: 5rem;
+    width: 5rem;
 }
 
 @media screen and (max-width: 768px) {
@@ -324,16 +360,52 @@ p {
 
 .lang {
     display: flex;
-    
     padding: 2rem;
     flex-direction: column;
     background-color: #c6d9f8;
-    background-image: linear-gradient(120deg, #c6d9f8 0%, #f7c9fc 100%);
+    background-image: linear-gradient(120deg, #d6e3f7 0%, #f3d6f7 100%);
     min-height: 100vh;
-
+    scroll-snap-align: start;
+    padding-top: 2rem;
 }
 
-#langList {
+.lang h2{
+    font-size: 2rem;
+    margin: 1rem;
+}
+
+#langList{
     list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#langList li{
+    position: absolute;
+    margin: 0.8rem;
+    width: 15rem;
+    padding: 5rem;
+    text-align: center;
+    background-color: #3977d4;
+    border: 2px solid black;
+    top: 120%;
+}
+
+.actions{
+    position: absolute;
+    top: 152%;
+    left: 41%;
+}
+
+.btn{
+    margin: 1rem;
+    padding: 1rem;
+    width: 5rem;
+    font-size: 1rem;
+    border: 1px solid black;
+    border-radius: 4px;
 
 }
+
