--- a/static/styles.css
+++ b/static/styles.css
@@ -390,6 +390,7 @@ p {
     text-align: center;
     background-color: #3977d4;
     border: 2px solid black;
+    border-radius: 6px;
     top: 120%;
 }
 
