--- a/src/Components/Styles/homeStyle.css
+++ b/src/Components/Styles/homeStyle.css
@@ -21,7 +21,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 1.5rem;
-  width: 25rem;
+  width: 40%;
 }
 
 .headerText h1,
@@ -59,30 +59,16 @@ h5 {
 
 .headerText h1 {
   position: relative;
-  font-size: 4rem;
+  font-size: 5rem;
   padding: 1rem;
   border-radius: 2rem 1rem;
 }
 
 .headerText h5{
-  width: 22ch;
-  animation: typing 2s steps(22), blink .5s step-end infinite alternate;
   border-right: 3px solid;
-  font-size: 1.8rem;
-  padding: 1rem;
+  font-size: 1.6rem;
+  padding: 1.4rem;
   border-radius: 1rem 2rem;
-}
-
-@keyframes typing {
-  from {
-    width: 0
-  }
-}
-    
-@keyframes blink {
-  50% {
-    border-color: transparent
-  }
 }
 
 .profDiv {
@@ -153,11 +139,11 @@ h5 {
 
 
 .profDiv img {
-  width: 17rem;
-  height: 17rem;
+  width: 20rem;
+  height: 20rem;
   object-fit: cover;
   border: 2px solid rgb(128, 141, 140);
-  border-radius: 2rem 1rem;
+  border-radius: 4rem 2rem;
   -webkit-animation: shake-vertical 18s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
 	animation: shake-vertical 18s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
   transition: all 1s;
