--- a/src/Components/Styles/navbarStyle.css
+++ b/src/Components/Styles/navbarStyle.css
@@ -24,13 +24,12 @@
     flex-wrap: wrap;
     justify-content: space-around;
     list-style: none;
-    width: 30%;
+    width: 50%;
     color: rgb(88, 87, 87);
-    margin: 1rem;
+    margin: 1rem 2rem 1rem 0;
 }
 
 .navLinks li {
-    display: inline-block;
     position: relative;
     cursor: pointer;
 }
