--- a/src/Components/Styles/homeStyle.css
+++ b/src/Components/Styles/homeStyle.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Belleza&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Belleza&family=Work+Sans:wght@200&display=swap');
 body {
   font-family: 'Belleza', serif;
 }
@@ -11,17 +10,14 @@ body {
   margin: 2rem;
   min-height: 70vh;
   flex-wrap: wrap;
-  background-color: #b4ddea;
-  background-image:  linear-gradient(#cdebeb80 2px, transparent 2px), linear-gradient(90deg, #e3fbfb80 2px, transparent 2px), linear-gradient(#e3fbfb80 1px, transparent 1px), linear-gradient(90deg, #e3fbfb60 1px, #b4ddea60 1px);
-  background-size: 50px 50px, 50px 50px, 10px 10px, 10px 10px;
-  background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
 }
 
 .headerText {
   display: flex;
   flex-direction: column;
   padding: 1.5rem;
-  width: 40%;
+  width: 45%;
+  border-right: 1px solid black;
 }
 
 .headerText h1,
@@ -32,9 +28,9 @@ h5 {
   backdrop-filter: blur(6px);  
 }
 
-.headerText h5{
-  box-shadow: 4px 4px 20px 0 rgb(0 0 0 / 39%);
-}
+/* .headerText h5{
+  box-shadow: -2px 2px 10px 0 rgb(0 0 0 / 39%);
+} */
 
 .headerText h1::before {  
   transform: scaleX(0);
@@ -61,14 +57,16 @@ h5 {
   position: relative;
   font-size: 5rem;
   padding: 1rem;
-  border-radius: 2rem 1rem;
+  border-radius: 2rem;
+  text-shadow: -2px 2px rgba(228, 224, 224, 0.568);
 }
 
 .headerText h5{
   border-right: 3px solid;
-  font-size: 1.6rem;
-  padding: 1.4rem;
-  border-radius: 1rem 2rem;
+  font-size: 1.5rem;
+  padding: 1.2rem;
+  border-radius: 1rem;
+  width: 70%;
 }
 
 .profDiv {
@@ -139,13 +137,11 @@ h5 {
 
 
 .profDiv img {
-  width: 20rem;
-  height: 20rem;
+  width: 18rem;
+  height: 18rem;
   object-fit: cover;
   border: 2px solid rgb(128, 141, 140);
-  border-radius: 4rem 2rem;
-  -webkit-animation: shake-vertical 18s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
-	animation: shake-vertical 18s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+  border-radius: 1rem;
   transition: all 1s;
   box-shadow: 4px 4px 20px 0 rgb(0 0 0 / 39%);
 }
