--- a/src/Components/Styles/navbarStyle.css
+++ b/src/Components/Styles/navbarStyle.css
@@ -2,14 +2,15 @@
 
 .navBar {
     min-height: 10vh;
-    margin: 0rem 0rem 0rem 3rem;
-    font-size: 2.8rem;
+    margin: 0rem 3rem 1rem 3rem;
+    font-size: 2.2rem;
     display: flex;
     flex-wrap: wrap;
     text-align: center;
     justify-content: space-between;
-    font-family: 'DM Serif Display', serif;
+    font-family: 'Work Sans', serif;
     z-index: 100;
+    border-bottom: 1px solid black;
 }
 
 .logo {
@@ -24,7 +25,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
     list-style: none;
-    width: 50%;
+    width: 45%;
     color: rgb(88, 87, 87);
     margin: 1rem 2rem 1rem 0;
 }
@@ -35,7 +36,7 @@
 }
 
 .navLinks li:after {
-    content: '';
+    content: ' ';
     position: absolute;
     width: 100%;
     transform: scaleX(0);
