--- a/src/Components/Styles/footerStyle.css
+++ b/src/Components/Styles/footerStyle.css
@@ -56,9 +56,10 @@
 .socialLinks {
   display: flex;
   justify-content: center;
-  width: 20rem;
-  padding-left: 1rem;
-  padding-right: 2rem;
+  width: 22rem;
+  padding: 1rem;
+  background-color: #223f48;
+  border-radius: 1rem;
 }
 
 .socialLinks a {
@@ -67,14 +68,9 @@
   margin-left: 1rem;
   margin-right: 1rem;
   padding: 12px;
-  background-color: #223f48;
   border-radius: 3rem;
 }
 
 .socialLinks a:nth-child(1) {
   padding: 1rem;
-}
-
-.socialLinks a:hover:nth-child(n+2) {
-  border: 1px solid white;
 }
