--- a/src/Components/Styles/homeStyle.css
+++ b/src/Components/Styles/homeStyle.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Belleza&family=Work+Sans:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300&display=swap');
 body {
-  font-family: 'Belleza', serif;
+  font-family: 'Red Hat Display', sans-serif;
+  -webkit-font-smoothing: antialiased
 }
 
 .headerDiv {
