--- a/src/Components/Styles/aboutStyle.css
+++ b/src/Components/Styles/aboutStyle.css
@@ -25,7 +25,7 @@
     margin: 1rem;
     padding: 1rem;
     font-size: 32px;
-    text-decoration: underline;
+    /* text-decoration: underline; */
 }
 
 .aboutList{
