--- a/src/Components/Styles/projStyle.css
+++ b/src/Components/Styles/projStyle.css
@@ -13,4 +13,22 @@
     min-height: 100vh;
     flex-wrap: wrap;
     border-radius: 1rem 2rem;
+    margin-bottom: 1rem;
+}
+
+.projList{
+    display: flex;
+    padding: 1rem;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.proj{
+    margin: 1rem;
+    padding: 1rem;
+    width: 40%;
+    height: 45vh;
+    border: 2px solid rgb(94, 94, 92);
+    background-color: rgba(74, 59, 88, 0.856);
+    
 }
