--- a/src/Components/Styles/footerStyle.css
+++ b/src/Components/Styles/footerStyle.css
@@ -16,11 +16,12 @@
   align-items: center;
 }
 
-.footerText h1 {
+.formDiv{
   border: 2px solid white;
   margin: 1rem;
   padding: 1rem;
-  width: 40%;
+  width: 50%;
+  height: 24rem;
   min-height: 20rem;
 }
 
@@ -29,6 +30,35 @@
   min-width: 80%;
   min-height: 2px;
   margin: 1rem 3rem 1rem 3rem;
+}
+
+form{
+  display: flex;
+  justify-content:center;
+  align-items:center;
+  padding: 1rem;
+  flex-direction: column;
+}
+
+form label{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 1.8rem;
+  margin: 1rem;
+}
+
+form input{
+  width: 50%;
+  font-family: "Red Hat Display", sans-serif;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+}
+
+#submit{
+  padding: 0.2rem;
+  margin: 1rem;
+  width: 30%;
 }
 
 .socials {
