bug: ✅fix aos issue

--- a/src/Components/Styles/homeStyle.css
+++ b/src/Components/Styles/homeStyle.css
@@ -169,7 +169,7 @@ h5 {
 .profDiv img {
   width: 18rem;
   height: 18rem;
-  object-fit: contain;
+  object-fit: cover;
   border-radius: 2rem;
-  transform: scale(1.5);
+  transform: scale(1.6);
 }
