--- a/src/Components/Styles/aboutStyle.css
+++ b/src/Components/Styles/aboutStyle.css
@@ -50,7 +50,7 @@
 }
 
 canvas{
-    width: 35%;
+    width: 45%;
 }
 
 .skillsContainer {
@@ -65,19 +65,16 @@ canvas{
 .skillsDiv {
     display: flex;
     flex-direction: column;
+    margin-top: 1rem;
+    width: 65%;
     align-items: center;
-    z-index: 1000;
-    width: 40%;
-}
-
-.skillsDiv h1 {
-    margin: 1rem;
 }
 
 .skillsList {
     margin: 1rem;
     list-style: none;
     color: #dde6d2;
+    
 }
 
 .skillsList li {
@@ -101,12 +98,13 @@ canvas{
     display: flex;
     list-style-type: none;
     flex-wrap: wrap;
-    font-weight: normal;
-    
     text-align: center;
     margin: 2rem;
-    width: 50%;
     color: #dde6d2;
+}
+
+.langList li{
+    margin: 4px;
 }
 
 .skillsContainer li{
